--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ html,
 body {
   height: 100%;
 
-  background-image: url('../img/3.png');
+  background-image: url('../img/demo.jpg');
 }
 body {
   color: #fff;
